--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -23,7 +23,7 @@
     * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
     -->
 <link href="{% static 'ui/main.css' %}" rel="stylesheet"></head>
-<body>
+<div>
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
         <div class="app-header header-shadow">
             <div class="app-header__logo">
@@ -404,62 +404,14 @@
         </div>
         {% block content %}{% endblock %}
     </div>
+</div>
 <script type="text/javascript" src="{% static 'ui/scripts/main.js' %}"></script></body>
 </html>
 
 
 
 
-</head>
-<body>
-  <header class="circle--header">
-    <div class="bounds">
-      <div class="circle--fluid">
-        <div class="circle--fluid--cell">
-          <h1 class="hide-text circle--logo"><a class="logo" href="{% url 'index' %}">Circle</a></h1>
-        </div>
-        <div class="circle--fluid--cell circle--fluid--primary">
-          <div class="circle--search">
-            <form action="{% url 'index' %}" method="GET">
-            <input type="text" name="q" placeholder="Search Projects..." />
-            <button type="submit">
-              <svg version="1.1" class="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 12 12" xml:space="preserve">
-                <path d="M12,10.6L8.3,6.9C8.7,6.2,9,5.4,9,4.5C9,2,7,0,4.5,0S0,2,0,4.5S2,9,4.5,9c0.9,0,1.7-0.3,2.4-0.7l3.7,3.7L12,10.6z M2,4.5
-                C2,3.1,3.1,2,4.5,2S7,3.1,7,4.5C7,5.9,5.9,7,4.5,7S2,5.9,2,4.5z"/>
-              </svg>
-            </button>
-            </form>
-          </div>
-        </div>
-        <div class="circle--fluid--cell circle--fluid--secondary">
-          <nav>
-            <ul class="circle--inline">
-              {% if user.is_authenticated %}
-              <p style="color:white;">Welcome, {{ user.username }}</p>
-              <li><a href="{% url 'logout-user' %}">Logout</a></li>
-              {% else %}
-              <li><a href="{% url 'signup' %}">Sign Up</a></li>
-              <li><a href="{% url 'login' %}">Sign In</a></li>
-              {% endif %}
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </header>
-  {% if messages %}
-  <div class="circle--actions--bar">
-    <div class="bounds">
-      <div class="grid-100">
-          <ul class="messages">
-              {% for message in messages %}
-              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-              {% endfor %}
-          </ul>
-      </div>
-    </div>
-  </div>
-  {% endif %}
+
 
 
 
