--- a/stb/core/templates/index.html
+++ b/stb/core/templates/index.html
@@ -1,230 +1,178 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block content %}
 
-  <div class="app-main">
-      <div class="app-sidebar sidebar-shadow">
-          <div class="app-header__logo">
-              <div class="logo-src"></div>
-              <div class="header__pane ml-auto">
-                  <div>
-                      <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
-                          <span class="hamburger-box">
-                              <span class="hamburger-inner"></span>
-                          </span>
-                      </button>
-                  </div>
-              </div>
-          </div>
-          <div class="app-header__mobile-menu">
-              <div>
-                  <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                      <span class="hamburger-box">
-                          <span class="hamburger-inner"></span>
-                      </span>
-                  </button>
-              </div>
-          </div>
-          <div class="app-header__menu">
-              <span>
-                  <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                      <span class="btn-icon-wrapper">
-                          <i class="fa fa-ellipsis-v fa-w-6"></i>
-                      </span>
-                  </button>
-              </span>
-          </div>    <div class="scrollbar-sidebar">
-              <div class="app-sidebar__inner">
-                  <ul class="vertical-nav-menu">
-                      <li class="app-sidebar__heading">Project</li>
-                      <li>
-                          <a class="mm-actived">
+<div class="app-main">
+    <div class="app-sidebar sidebar-shadow">
+        <div class="app-header__logo">
+            <div class="logo-src"></div>
+            <div class="header__pane ml-auto">
+                <div>
+                    <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="app-header__mobile-menu">
+            <div>
+                <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="app-header__menu">
+            <span>
+                <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+                    <span class="btn-icon-wrapper">
+                        <i class="fa fa-ellipsis-v fa-w-6"></i>
+                    </span>
+                </button>
+            </span>
+        </div>
+        <div class="scrollbar-sidebar">
+            <div class="app-sidebar__inner">
+                <ul class="vertical-nav-menu">
+                    <li class="app-sidebar__heading">Project Needs</li>
+                    <li>
+                        <a class="mm-actived">
                             <i class="metismenu-icon pe-7s-rocket"></i>
                             All
-                          </a>
-                      </li>
-                      {% for position in positions %}
-                      <li>
-                          <a href="{% url 'project-needs' position.id %}">
-                              <i class="metismenu-icon pe-7s-rocket"></i>
-                              {{ position }}
-                          </a>
-                      </li>
-                      {% endfor %}
-                  </ul>
-              </div>
-          </div>
-      </div>
-      <div class="app-main__outer">
-          <div class="app-main__inner">
-              <div class="app-page-title">
-                  <div class="page-title-wrapper">
-
-
-                  </div>
-              </div>
-
-
-              <div class="row">
-                  <div class="col-md-12">
-                      <div class="main-card mb-3 card">
-                          <div class="card-header">Active Projects
-                              <div class="btn-actions-pane-right">
-                                  <div role="group" class="btn-group-sm btn-group">
-                                      <button class="active btn btn-focus">Last Week</button>
-                                      <button class="btn btn-focus">All Month</button>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="table-responsive">
-                              <table class="align-middle mb-0 table table-borderless table-striped table-hover">
-                                  <thead>
-                                  <tr>
-                                      <th class="text-center">Project ID #</th>
-                                      <th>Project Title</th>
-                                      <th class="text-center">Project Needs</th>
-                                      <th class="text-center">Action</th>
-                                  </tr>
-                                  </thead>
-                                  <tbody>
+                        </a>
+                    </li>
+                    {% for position in positions %}
+                    <li>
+                        <a href="{% url 'project-needs' position.id %}">
+                            <i class="metismenu-icon pe-7s-rocket"></i>
+                            {{ position }}
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="app-main__outer">
+        <div class="app-main__inner">
+            <div class="app-page-title">
+                <div class="page-title-wrapper">
+                    <div class="page-title-heading">
+                        <div class="page-title-icon">
+                            <i class="pe-7s-car icon-gradient bg-mean-fruit">
+                            </i>
+                        </div>
+                        <div>Projects
+                            <div class="page-title-subheading">Projects available to apply to.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-title-actions">
+                        <button onclick="window.location.href = '{% url "project-new" %}';" type="button" data-placement="bottom" class="mr-3 btn btn-success">
+                            <i class="fa fa-business-time fa-w-20"></i>
+                            New Project
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="main-card mb-3 card">
+                        <div class="card-header">
+                            Open Projects
+                        </div>
+                        <div class="table-responsive">
+                            <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">Project ID #</th>
+                                        <th>Project Title</th>
+                                        <th class="text-center">Project Needs</th>
+                                        <th class="text-center">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
                                 {% for project in projects %}
-                                  <tr>
-                                      <td class="text-center text-muted">#{{ project.id }}</td>
-                                      <td>
-                                          <div class="widget-content p-0">
-                                              <div class="widget-content-wrapper">
-                                                  <div class="widget-content-left mr-3">
-                                                      <div class="widget-content-left">
-                                                          <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg" alt="">
-                                                      </div>
-                                                  </div>
-                                                  <div class="widget-content-left flex2">
-                                                      <div class="widget-heading">{{ project.title }}</div>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </td>
-                                      <td class="text-center">
+                                <tr>
+                                    <td class="text-center text-muted">#{{ project.id }}</td>
+                                    <td>
+                                        <div class="widget-content p-0">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left mr-3">
+                                                    <div class="widget-content-left">
+                                                        <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="widget-content-left flex2">
+                                                    <div class="widget-heading">{{ project.title }}</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="text-center">
                                         {% for position in project.positions.all %}
                                             {{ position }}{% if forloop.last %}{% else %}, {% endif %}
                                         {% endfor %}
-                                      </td>
-                                      <td class="text-center">
-                                          <button onclick="window.location.href = '{% url "project" project.id %}';" type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm">Details</button>
-                                      </td>
-                                  </tr>
+                                    </td>
+                                    <td class="text-center">
+                                        <button onclick="window.location.href = '{% url "project" project.id %}';" type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm">Details</button>
+                                    </td>
+                                </tr>
                                 {% endfor %}
-                                  </tbody>
-                              </table>
-                          </div>
-                          <div class="d-block text-center card-footer">
-                              <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
-                              <button class="btn-wide btn btn-success">Save</button>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="app-wrapper-footer">
-              <div class="app-footer">
-                  <div class="app-footer__inner">
-                      <div class="app-footer-left">
-                          <ul class="nav">
-                              <li class="nav-item">
-                                  <a href="javascript:void(0);" class="nav-link">
-                                      Footer Link 1
-                                  </a>
-                              </li>
-                              <li class="nav-item">
-                                  <a href="javascript:void(0);" class="nav-link">
-                                      Footer Link 2
-                                  </a>
-                              </li>
-                          </ul>
-                      </div>
-                      <div class="app-footer-right">
-                          <ul class="nav">
-                              <li class="nav-item">
-                                  <a href="javascript:void(0);" class="nav-link">
-                                      Footer Link 3
-                                  </a>
-                              </li>
-                              <li class="nav-item">
-                                  <a href="javascript:void(0);" class="nav-link">
-                                      <div class="badge badge-success mr-1 ml-0">
-                                          <small>NEW</small>
-                                      </div>
-                                      Footer Link 4
-                                  </a>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-
-  <div class="bounds circle--page">
-    <div class="circle--page--header circle--fluid">
-      <div class="circle--fluid--cell circle--fluid--primary">
-        <h2>Projects</h2>
-      </div>
-      <div class="circle--fluid--cell circle--fluid--secondary">
-        <a class="button button-primary icon-on-left" href="{% url 'project-new' %}">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 13 13" style="enable-background:new 0 0 13 13;" xml:space="preserve" class="add">
-            <polygon points="7,6 7,0 6,0 6,6 0,6 0,7 6,7 6,13 7,13 7,7 13,7 13,6 "/>
-          </svg>
-          New Project
-        </a>
-      </div>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="d-block text-center card-footer">
+                            <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+                            <button class="btn-wide btn btn-success">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="app-wrapper-footer">
+            <div class="app-footer">
+                <div class="app-footer__inner">
+                    <div class="app-footer-left">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    Footer Link 1
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    Footer Link 2
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="app-footer-right">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    Footer Link 3
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    <div class="badge badge-success mr-1 ml-0">
+                                        <small>NEW</small>
+                                    </div>
+                                    Footer Link 4
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="grid-25">
-      <div class="circle--filter circle--secondary--module">
-        <h4>Project Needs</h4>
-        <ul class="circle--filter--list">
-          <li><a class="selected">All Needs</a></li>
-          {% for position in positions %}
-          <li><a href="{% url 'project-needs' position.id %}">{{ position }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-
-    <div class="grid-70 grid-push-5">
-      <table class="u-full-width circle--table">
-        <thead>
-          <tr>
-            <th>Project Title</th>
-            <th>Project Needs</th>
-            <th>Open / Filled</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for project in projects %}
-          <tr class="clickable-row" data-href="{% url 'project' project.id %}">
-            <td>
-              <h3>{{ project.title }}</h3>
-            </td>
-            <td class="circle--cell--right">
-              <span class="secondary-label">
-                {% for position in project.positions.all %}
-                  {{ position }}{% if forloop.last %}{% else %}, {% endif %}
-                {% endfor %}
-              </span>
-            </td>
-            <td>
-              <h3>OPEN</h3>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
+</div>
 
 {% endblock %}
 
